scale to window size, update graphics

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <script src="board.js"></script>
         <script src="ai.js"></script>
         <script src="game.js"></script>
+        <link rel="stylesheet" href="http://paulpage.net/paul.css">
+        <link rel="stylesheet" href="http://paulpage.net/colors.css">
     </head>
-    <body>
-        
+    <body class="light-gray" style="text-align: center">
         <button onclick="newGame()">New Game</button>
         <br>
-        <canvas id="canvas">
+        <br>
+        <canvas id="canvas" class="padded">
             Your browser does not support canvas.
         </canvas>
         <p id="message"></p>
