Fix css references

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <script src="board.js"></script>
         <script src="ai.js"></script>
         <script src="game.js"></script>
-        <link rel="stylesheet" href="http://paulpage.net/paul.css">
-        <link rel="stylesheet" href="http://paulpage.net/colors.css">
+        <link rel="stylesheet" href="https://pjpage.github.io/paul.css/paul.css">
+        <link rel="stylesheet" href="https://pjpage.github.io/paul.css/colors.css">
     </head>
     <body class="light-gray" style="text-align: center">
         <button onclick="newGame()">New Game</button>
